Regression fix some spacing on bs3 menus; more efficient calculations; fixes some .less calculations

--- a/framework/modules/navigation/assets/less/dropdown-bootstrap.less
+++ b/framework/modules/navigation/assets/less/dropdown-bootstrap.less
@@ -2,7 +2,7 @@
 /*//	margin-top:60px;*/
 /*}*/
 
-//@media (min-width: @menu_width+px) {
+//@media (min-width: @menu_width + 0px) {
 //	.navbar-spacer {
 //		height : 44px;
 //	}
@@ -10,7 +10,7 @@
 body {
 //	padding-top: 40px;
 }
-@media screen and (max-width: @menu_width+px) {
+@media screen and (max-width: @menu_width + 0px) {
     body {
 		margin-top: 50px;
 	}
