--- a/themes/bootstrap3theme/less/bootstraptheme.less
+++ b/themes/bootstrap3theme/less/bootstraptheme.less
@@ -7,12 +7,12 @@ span.required {
 }
 
 .fixedmenu {
-	margin-top : @menu_height+px;
+	margin-top : @menu_height + 0px;
 }
 
-.container.main-menu {
-    margin-bottom:15px;
-}
+//.container.main-menu {
+//    margin-bottom:15px;
+//}
 
 .btn {
 	margin: 2px;
